Fixed: Title for pages
Pages now have a more consistent title field

--- a/diamm/templates/website/composition/composition_detail.jinja2
+++ b/diamm/templates/website/composition/composition_detail.jinja2
@@ -1,7 +1,7 @@
 {% extends "base.jinja2" %}
 
 {% block title %}
-    <title>Composition: {{ content.title }}</title>
+    <title>Digital Image Archive of Medieval Music :: {{ content.title }}</title>
 {% endblock %}
 
 {% block body %}
