--- a/diamm/templates/website/search/search.jinja2
+++ b/diamm/templates/website/search/search.jinja2
@@ -1,5 +1,9 @@
 {% extends "base.jinja2" %}
 
+{% block title %}
+    <title>Digital Image Archive of Medieval Music :: Search</title>
+{% endblock %}
+
 {% block fullwidth %}
     <div id="search-body">
         <!-- filled by react application -->
