--- a/diamm/templates/website/user/profile.jinja2
+++ b/diamm/templates/website/user/profile.jinja2
@@ -1,5 +1,9 @@
 {% extends "base.jinja2" %}
 
+{% block title %}
+    <title>Digital Image Archive of Medieval Music :: {{ content.full_name }}</title>
+{% endblock %}
+
 {% block body %}
     <div class="columns">
         <div class="column">
