--- a/diamm/templates/index.jinja2
+++ b/diamm/templates/index.jinja2
@@ -7,6 +7,7 @@
       "@context": "http://schema.org",
       "@type": "Organization",
       "name": "Digital Image Archive of Medieval Music",
+      "alternateName": "DIAMM",
       "url": "https://www.diamm.ac.uk",
       "telephone": "+44 (0)1865 241323",
       "address": {
