--- a/diamm/templates/base.jinja2
+++ b/diamm/templates/base.jinja2
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="search" href="{{ request.scheme }}://{{ request.get_host() }}{{ url('opensearch') }}" type="application/opensearchdescription+xml" title="DIAMM"/>
     {% block title %}
     <title>Digital Image Archive of Medieval Music</title>
