Fixed: Be a bit more polite when asking to log in

--- a/diamm/templates/website/auth/login.jinja2
+++ b/diamm/templates/website/auth/login.jinja2
@@ -5,7 +5,7 @@
     <div class="columns" style="align-items: center">
         <div class="column is-half is-offset-one-quarter">
             <div>
-                <h2 class="title">Log in</h2>
+                <h2 class="title">Please log in</h2>
                 <form action="{{ url('login') }}" method="post" class="login">
                     {% csrf_token %}
                     {% if form.non_field_errors() %}
