--- a/diamm/templates/admin/diamm_data/source/change_form.html
+++ b/diamm/templates/admin/diamm_data/source/change_form.html
@@ -1,9 +1,7 @@
-{% extends "admin/change_list.html" %}
+{% extends "admin/change_form.html" %}
 {% load i18n admin_urls %}
 
 {% block object-tools-items %}
+    <li><a href="{% url 'admin:copy-inventory' original.pk %}">Copy Inventory</a></li>
     {{ block.super }}
-    <li>
-        <a href="/foo">Foo.</a>
-    </li>
 {% endblock %}
