--- a/diamm/templates/base.jinja2
+++ b/diamm/templates/base.jinja2
@@ -40,9 +40,11 @@
             <div class="column is-two-thirds footer-address">
                 <img src="{{ static('images/headerLogo.png') }}" alt="DIAMM Logo" />
                 <h5 class="title is-5">The Digital Image Archive of Medieval Music</h5>
-                <p>Faculty of Music,<br />
+                <p>University of Oxford,<br />
+                    Faculty of Music,<br />
                     St. Aldates,<br />
-                    Oxford, United Kingdom
+                    Oxford, OX1 1DB,<br />
+                    United Kingdom
                 </p>
             </div>
             {# <div class="column">
