--- a/diamm/templates/website/country/country_detail.jinja2
+++ b/diamm/templates/website/country/country_detail.jinja2
@@ -7,17 +7,54 @@
 {% block body %}
     <div class="columns">
         <div class="column">
-            <h2 class="title">{{ content.name }}</h2>
+            <h2 class="title is-3">{{ content.name }}</h2>
         </div>
     </div>
     <div class="columns">
-        <div class="column is-one-third">
+        <div class="column is-half">
+            {% if content.cities %}
             <h3 class="title is-4">Cities</h3>
-            <ul>
-                {% for city in content.cities %}
-                    <li><a href="{{ city.url }}">{{ city.name }}</a></li>
+            <table class="table">
+                <tbody>
+                    {% for city in content.cities %}
+                    <tr>
+                        <td><a href="{{ city.url }}">{{ city.name }}</a></td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            {% endif %}
+
+            {% if content.states %}
+            <h3 class="title is-4">States</h3>
+            <table class="table">
+                <tbody>
+                {% for state in content.states %}
+                <tr>
+                    <td><a href="{{ state.url }}">{{ state.name }}</a></td>
+                </tr>
                 {% endfor %}
-            </ul>
+                </tbody>
+            </table>
+            {% endif %}
+
+            {% if content.regions %}
+            <h3 class="title is-4">Regions</h3>
+            <table class="table">
+                <tbody>
+                {% for region in content.regions %}
+                <tr>
+                    <td><a href="{{ region.url }}">{{ region.name }}</a></td>
+                </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+            {% endif %}
         </div>
     </div>
+    {% if request.user.is_staff %}
+        {% with edit_path="/admin/diamm_data/geographicarea/" %}
+            {% include "website/blocks/edit_bar.jinja2" %}
+        {% endwith %}
+    {% endif %}
 {% endblock %}
