--- a/diamm/templates/website/person/person_detail.jinja2
+++ b/diamm/templates/website/person/person_detail.jinja2
@@ -7,106 +7,137 @@
 {% block body %}
     <div class="columns">
         <div class="column">
-            <h2 class="title is-2">{{ content.full_name }}</h2>
-            {% if content.variant_names %}
-            <h3 class="subtitle is-3">
-                {{ content.variant_names|join(", ") }}
-            </h3>
-            {% endif %}
+            <h2 class="title is-3">{{ content.full_name }}</h2>
         </div>
     </div>
     <div class="columns">
         <div class="column">
-            {% if content.compositions %}
-                <h3 class="title is-3">Compositions</h3>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <td>Composition</td>
-                            <td>Appears in</td>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    {% for composition in content.compositions %}
-                        <tr>
-                            <td>
-                                <a href="{{ composition.url }}">
-                                    {{ "? " if composition.uncertain else "" }}{{ composition.title }}
-                                </a>
-                            </td>
-                            <td>
-                                {% if composition.sources %}
-                                    {% for source in composition.sources %}
-                                        <div>
-                                            <a href="{{ source.url }}">{{ source.name }}</a>
-                                        </div>
-                                    {% endfor %}
-                                {% endif %}
-                            </td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            {% endif %}
-            {% if content.copied_sources %}
-                <h4 class="title is-4">Sources Copied</h4>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>Source</th>
-                            <th>Copyist Type</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    {% for source in content.copied_sources %}
-                        <tr>
-                            <td>
-                                {% if source.has_images and source.public_images %}
-                                    <i class="fa fa-file-image-o" aria-hidden="true"></i>
-                                {% endif %}
-                                {{ "? " if source.uncertain else "" }}<a href="{{ source.url }}">{{ source.source }}</a>
-                            </td>
-                            <td>
-                                {{ source.copyist_type }}
-                            </td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            {% endif %}
-            {% if content.related_sources %}
-                <h4 class="title is-4">Relationships to Sources</h4>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>Source</th>
-                            <th>Relationship</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    {% for source in content.related_sources %}
-                        <tr>
-                            <td>
-                                {% if source.has_images and source.public_images %}
-                                    <i class="fa fa-file-image-o" aria-hidden="true"></i>
-                                {% endif %}
-                                {{ "? " if source.uncertain else "" }}<a href="{{ source.url }}">{{ source.source }}</a>
-                            </td>
-                            <td>
-                                {{ source.relationship }}
-                            </td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            {% endif %}
+            <table class="source-details">
+                <tbody>
+                {% if content.variant_names %}
+                <tr>
+                    <th>Variant names</th>
+                    <td>
+                        {{ content.variant_names|join(", ") }}
+                    </td>
+                </tr>
+                {% endif %}
+                {% if content.roles %}
+                    <tr>
+                        <th>Roles</th>
+                        <td>
+                            <ul>
+                                {% for role in content.roles %}
+                                <li>
+                                    {{ role.role }}
+                                </li>
+                                {% endfor %}
+                            </ul>
+                        </td>
+                    </tr>
+                {% endif %}
+                {% if content.compositions %}
+                <tr>
+                    <th>Compositions</th>
+                    <td>
+                        <table class="table is-striped is-bordered">
+                            <thead>
+                                <tr>
+                                    <th>Composition</th>
+                                    <th>Appears in</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            {% for composition in content.compositions %}
+                                <tr>
+                                    <td>
+                                        <a href="{{ composition.url }}">
+                                            {{ "? " if composition.uncertain else "" }}{{ composition.title }}
+                                        </a>
+                                    </td>
+                                    <td>
+                                        {% if composition.sources %}
+                                            {% for source in composition.sources %}
+                                                <div>
+                                                    <a href="{{ source.url }}">{{ source.name }}</a>
+                                                </div>
+                                            {% endfor %}
+                                        {% endif %}
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </td>
+                </tr>
+                {% endif %}
+                {% if content.copied_sources %}
+                <tr>
+                    <th>Sources copied</th>
+                    <td>
+                        <table class="table is-bordered is-striped">
+                            <thead>
+                                <tr>
+                                    <th>Source</th>
+                                    <th>Copyist Type</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            {% for source in content.copied_sources %}
+                                <tr>
+                                    <td>
+                                        {% if source.has_images and source.public_images %}
+                                            <i class="fa fa-file-image-o" aria-hidden="true"></i>
+                                        {% endif %}
+                                        {{ "? " if source.uncertain else "" }}<a href="{{ source.url }}">{{ source.source }}</a>
+                                    </td>
+                                    <td>
+                                        {{ source.copyist_type }}
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </td>
+                </tr>
+                {% endif %}
+                {% if content.related_sources %}
+                <tr>
+                    <th>Source relationships</th>
+                    <td>
+                        <table class="table is-bordered is-striped">
+                            <thead>
+                            <tr>
+                                <th>Source</th>
+                                <th>Relationship</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for source in content.related_sources %}
+                                <tr>
+                                    <td>
+                                        {% if source.has_images and source.public_images %}
+                                            <i class="fa fa-file-image-o" aria-hidden="true"></i>
+                                        {% endif %}
+                                        {{ "? " if source.uncertain else "" }}<a href="{{ source.url }}">{{ source.source }}</a>
+                                    </td>
+                                    <td>
+                                        {{ source.relationship }}
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </td>
+                </tr>
+                {% endif %}
+                </tbody>
+            </table>
         </div>
     </div>
     {% if request.user.is_staff %}
-        <div class="columns">
-            <div class="column">
-                <a class="button" href="/admin/diamm_data/person/{{ content.pk }}">Edit</a>
-            </div>
-        </div>
+        {% with edit_path="/admin/diamm_data/person/" %}
+            {% include "website/blocks/edit_bar.jinja2" %}
+        {% endwith %}
     {% endif %}
 {% endblock %}
