--- a/diamm/templates/website/set/set_detail.jinja2
+++ b/diamm/templates/website/set/set_detail.jinja2
@@ -7,52 +7,71 @@
 {% block body %}
     <div class="columns">
         <div class="column">
-            <h2 class="title is-2">Set: {{ content.cluster_shelfmark }}</h2>
-            <h3 class="subtitle">{{ content.type }}</h3>
-            <div>
-                <h4 class="title is-5">Holding archives</h4>
-                {% set comma = joiner("; ") %}
-                {%- for group in content.sources | groupby('archive_name') -%}
-                    {{ comma() }}{{ group.grouper }}
-                {%- endfor -%}
-            </div>
-            {% if content.description %}
-                {{ content.description | markdown | safe }}
-            {% endif %}
-            {% if content.sources %}
-                <h3 class="title is-4">Sources</h3>
-                <div class="archive-sources">
-                    {% for source in content.sources %}
-                        <div class="box">
-                            {% if source.cover_image %}
-                                <a href="{{ source.url }}">
-                                    <img src="{{ source.cover_image }}" />
-                                </a>
-                            {% else %}
-                                <div class="no-image">
-                                    <div>
-                                        <i class="fa fa-eye-slash"></i>
-                                    </div>
-                                    <div>
-                                        <small>No images available</small>
-                                    </div>
-                                </div>
-                            {% endif %}
-                            <div>
-                                <a href="{{ source.url }}">{{ source.display_name }}</a> ({{ source.archive_name }})
-                            </div>
-                        </div>
-                    {% endfor %}
-                </div>
-            {% endif %}
+            <h2 class="title is-3">Set: {{ content.cluster_shelfmark }}</h2>
         </div>
     </div>
-    {% if request.user.is_staff %}
-        <div class="columns">
-            <div class="column">
-                <a class="button" href="/admin/diamm_data/set/{{ content.pk }}">Edit</a>
+    <div class="columns">
+        <div class="column">
+            <table class="source-details">
+                <tbody>
+                    <tr>
+                        <th>Set type</th>
+                        <td>{{ content.type }}</td>
+                    </tr>
+                    <tr>
+                        <th>Holding archives</th>
+                        <td>
+                            {% set comma = joiner("; ") %}
+                            {%- for group in content.sources | groupby('archive_name') -%}
+                                {{ comma() }}{{ group.grouper }}
+                            {%- endfor -%}
+                        </td>
+                    </tr>
+                    {% if content.description %}
+                    <tr>
+                        <th>Set description</th>
+                        <td>
+                            {{ content.description | markdown | safe }}
+                        </td>
+                    </tr>
+                    {% endif %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+    {% if content.sources %}
+    <div class="columns">
+        <div class="column">
+            <h3 class="title is-4">Sources</h3>
+            <div class="archive-sources">
+                {% for source in content.sources %}
+                    <div class="box">
+                        {% if source.cover_image %}
+                            <a href="{{ source.url }}">
+                                <img src="{{ source.cover_image }}" />
+                            </a>
+                        {% else %}
+                            <div class="no-image">
+                                <div>
+                                    <i class="fa fa-eye-slash"></i>
+                                </div>
+                                <div>
+                                    <small>No images available</small>
+                                </div>
+                            </div>
+                        {% endif %}
+                        <div>
+                            <a href="{{ source.url }}">{{ source.display_name }}</a> ({{ source.archive_name }})
+                        </div>
+                    </div>
+                {% endfor %}
             </div>
         </div>
+    </div>
     {% endif %}
-
+    {% if request.user.is_staff %}
+        {% with edit_path="/admin/diamm_data/set/" %}
+            {% include "website/blocks/edit_bar.jinja2" %}
+        {% endwith %}
+    {% endif %}
 {% endblock %}
