Fixed: Simplify edit button

--- a/diamm/templates/website/blocks/edit_bar.jinja2
+++ b/diamm/templates/website/blocks/edit_bar.jinja2
@@ -1,16 +1,5 @@
 <div class="columns">
     <div class="column">
-        <nav class="level">
-            <div class="level-left"></div>
-            <div class="level-right">
-                <div class="tabs">
-                    <ul>
-                        <li>
-                            <a href="{{ edit_path }}{{ content.pk }}">Edit</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <a class="button" href="{{ edit_path }}{{ content.pk }}">Edit</a>
     </div>
 </div>
