--- a/diamm/templates/website/region/region_detail.jinja2
+++ b/diamm/templates/website/region/region_detail.jinja2
@@ -7,9 +7,28 @@
 {% block body %}
     <div class="columns">
         <div class="column">
-            <h2 class="title">{{ content.name }}</h2>
+            <h2 class="title is-3">{{ content.name }}</h2>
+            {% if content.parent %}
+                <h3 class="subtitle is-4">{{ content.parent }}</h3>
+            {% endif %}
         </div>
     </div>
+    {% if content.provenance %}
+    <div class="columns">
+        <div class="column is-half">
+            <h3 class="title is-4">Source provenance</h3>
+            <table class="table">
+                <tbody>
+                    {% for source in content.provenance %}
+                    <tr>
+                        <td><a href="{{ source.url }}">{{ source.name }}</a> {{ "(uncertain)" if source.region_uncertain else "" }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+    {% endif %}
     {% if request.user.is_staff %}
         {% with edit_path="/admin/diamm_data/geographicarea/" %}
             {% include "website/blocks/edit_bar.jinja2" %}
