New: Show authors next to descriptions
Unless author is "DIAMM, 2017" (most of them) in which case we'll hide it.

Fixes #337

--- a/diamm/static/stylesheets/_source.scss
+++ b/diamm/static/stylesheets/_source.scss
@@ -6,6 +6,11 @@
     font-weight: 500;
     margin-bottom: 0.5rem;
   }
+  .note-author {
+    font-size: 80%;
+    font-style: italic;
+    text-align: right;
+  }
 }
 
 .source-archive-logo {
