--- a/diamm/static/stylesheets/styles.css
+++ b/diamm/static/stylesheets/styles.css
@@ -9256,6 +9256,12 @@ ul.list li {
   margin-bottom: 0.5rem;
 }
 
+.notes .note-author {
+  font-size: 80%;
+  font-style: italic;
+  text-align: right;
+}
+
 .source-archive-logo img {
   max-height: 4rem;
 }
