New: Statistics on the front page
A new block showing the latest numbers

--- a/diamm/templates/index.jinja2
+++ b/diamm/templates/index.jinja2
@@ -77,6 +77,10 @@
         </div>
         <div class="column is-one-third front-sidebar">
             <div class="front-sidebar-block">
+                <h4 class="title is-4">DIAMM At a glance</h4>
+                {{ statistics() }}
+            </div>
+            <div class="front-sidebar-block">
                 <h4 class="title is-4">Recently Added Sources</h4>
                 {{ recently_added_sources() }}
             </div>
