Fixed: Missing TR

--- a/diamm/templates/website/archive/archive_detail.jinja2
+++ b/diamm/templates/website/archive/archive_detail.jinja2
@@ -31,11 +31,13 @@
             <h3 class="title is-4">Sources in this Archive</h3>
             <table class="table">
                 <thead>
-                    <th></th>
-                    <th>Source name</th>
-                    <th>Date</th>
-                    <th>Type</th>
-                    <th>Surface</th>
+                    <tr>
+                        <th>&nbsp;</th>
+                        <th>Source name</th>
+                        <th>Date</th>
+                        <th>Type</th>
+                        <th>Surface</th>
+                    </tr>
                 </thead>
                 <tbody>
                 {% for source in content.sources %}
