--- a/diamm/templates/website/source/source_detail.jinja2
+++ b/diamm/templates/website/source/source_detail.jinja2
@@ -1,10 +1,20 @@
 {% extends "base.jinja2" %}
 
 {% block title %}
-    <title>Digital Image Archive of Medieval Music :: {{ content.display_name }}</title>
+    <title>{{ content.display_name }} - DIAMM</title>
 {% endblock %}
 
 {% block head %}
+    <meta name="description" content="{{ content.display_summary }}">
+    <script type="application/ld+json">
+    {
+        "@context": "http://schema.org",
+        "@type": "Thing",
+        "url": "{{ request.build_absolute_uri }}",
+        "name": "{{ content.display_name }}",
+        "description": "{{ content.display_summary }}"
+    }
+    </script>
 {% endblock %}
 
 {% block body %}
