Fixed: Add schema.org markup to frontpage

--- a/diamm/templates/base.jinja2
+++ b/diamm/templates/base.jinja2
@@ -10,6 +10,33 @@
     {% endblock %}
     {% block head %}
     {% endblock %}
+    <script type="application/json">
+    {
+        "@context": "http://schema.org",
+        "@type": "Organization",
+        "name": "Digital Image Archive of Medieval Music",
+        "url": "https://www.diamm.ac.uk",
+        "address": {
+            "@type": "PostalAddress",
+            "addressCountry": "United Kingdom",
+            "addressLocality": "Oxford",
+            "addressRegion": "Oxfordshire",
+            "streetAddress": "St. Aldates",
+            "postalCode": "OX1 1DB"
+        }
+        "contactPoint": [{
+            "@type": "ContactPoint",
+            "telephone": "+44 (0)1865 241323",
+            "contactType": "customer service",
+            "email": "diamm@music.ox.ac.uk",
+            "hoursAvailable": {
+                "@type": "OpeningHoursSpecification",
+                "opens": "10:00:00Z+00:00",
+                "closes": "19:00:00Z+00:00"
+            }
+        }]
+    }
+    </script>
 </head>
 <body>
     {% if messages %}
