--- a/diamm/templates/website/auth/login.jinja2
+++ b/diamm/templates/website/auth/login.jinja2
@@ -26,6 +26,9 @@
                 </form>
 
                 <p>
+                    Your password must be at least 8 characters and a mix of letters and numbers.
+                </p>
+                <p>
                     Are you a user of the old DIAMM site?
                     <a href="{{ url('reset') }}">You must reset your password.</a>
                 </p>
