--- a/diamm/templates/website/bibliography/bibliography_entry.jinja2
+++ b/diamm/templates/website/bibliography/bibliography_entry.jinja2
@@ -60,7 +60,7 @@
 
 {%- macro first_title(content) %}
     {# journal, book, or festschrift -#}
-    {%- if content.type.pk in (5, 6, 2) -%}
+    {%- if content.type.pk in (5, 6, 2, 9) -%}
     <em>{{ punctuate(content.title) }}</em>
     {%- elif content.type.pk in (5,) and content.publication_info.filter(type=2).count() > 0 -%}
     {# chapter in a festschrift #}
@@ -149,7 +149,7 @@
         {# journal #}
         {% set volume_no = content.publication_info.filter(type=1)|first -%}
         {% if volume_no -%}{{ volume_no.entry }}:&nbsp;{% endif -%}{{ pages(content) }}.
-    {% elif content.type.pk in (2, 3, 5, 6) -%}
+    {% elif content.type.pk in (2, 3, 5, 6, 9) -%}
         {# book #}
         {% set pg = pages(content) -%}
         {% set eds = editors(content) -%}
